# vk_publisher

./: .env  .env.example  .gitignore  .php-cs-fixer.php  .pre-commit-config.yaml  CODEQL_TROUBLESHOOTING.md  Dockerfile  FINAL_PROMPT.md  QUICK_START_GUIDE.md  README.md  README_PRODUCTION.md  RECOMMENDATIONS.md  RELEASE_SUMMARY.md  SECURITY.md  SECURITY_AND_PERFORMANCE_AUDIT.md  bandit_report.json  composer.json  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-ui.txt  requirements.txt
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  codeql-config.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: anchore-syft.yml  anchore.yml  apisec-scan.yml  appknox.yml  bandit.yml  bearer.yml  black-duck-security-scan-ci.yml  brakeman.yml  checkmarx.yml  clj-holmes.yml  clj-watson.yml  cloudrail.yml  codacy.yml  codeql.yml  codescan.yml  contrast-scan.yml  crda.yml  credo.yml  crunch42.yml  datree.yml  defender-for-devops.yml  detekt.yml  devskim.yml  docker-publish.yml  endorlabs.yml  eslint.yml  ethicalcheck.yml  flawfinder.yml  fortify.yml  hadolint.yml  jfrog-sast.yml  jscrambler-code-integrity.yml  kubesec.yml  lintr.yml  mayhem-for-api.yml  mobsf.yml  msvc.yml  neuralegion.yml  njsscan.yml  nowsecure-mobile-sbom.yml  (+34 more)
config/: social_links.json  sources.json  vk_config.json
data/: posts.db
docker/: prometheus.yml
docs/: ARCHITECTURE_MODERNIZATION_PLAN.md  ARCHITECTURE_RECONSTRUCTION_RU.md  CANONICAL_ARCHITECTURE.md  CODE_OWNERSHIP.md  DEPLOYMENT_GUIDE.md  DEPLOY_CHECKLIST.md  ENTRYPOINTS.md  MIGRATION.md  PRODUCT_IMPROVEMENT_PLAN_RU.md  PROJECT_AUDIT_RU.md  PROJECT_STRUCTURE.md  README_BLUEPRINT.md  README_RU.md  RELEASE_PROCESS.md  START_HERE.md  TROUBLESHOOTING.md  UBUNTU_VPS_INSTALL.md  VK_API_SETUP.md  WEB_UI_GUIDE.md  WINDOWS_INSTALL.md
monitoring/: prometheus.yml  prometheus_alerts.yml
monitoring/grafana/dashboards/: dashboard.yml  vk_publisher_overview.json
scripts/: health_check.py  test_database.py  test_setup.py  test_vk_api.py
scripts/release/: build_linux.sh  build_windows.ps1
src/: __init__.py  main.py  vk_api_client.py  web_ui.py
src/Client/: VkApiClient.php
src/Config/: VkConfig.php
src/Contracts/: VkClientInterface.php
src/DTO/: PhotoUploadRequest.php  PostRequest.php
src/Exceptions/: CaptchaRequiredException.php  RateLimitException.php  ValidationException.php  VkApiException.php
src/Services/: MediaService.php  PostService.php
src/api/: deps.py
src/api/routes/: config.py  stats.py  system.py
src/application/: __init__.py
src/application/tasks/: __init__.py  broker.py  publish_tasks.py  rewrite_tasks.py
src/bootstrap/: container.py
src/content_fetcher/: __init__.py  rss_parser.py  vk_scraper.py  web_parser.py
src/core/: __init__.py  config.py  exceptions.py  logging.py
src/database/: __init__.py  db.py
src/domain/: __init__.py  entities.py  interfaces.py
src/infrastructure/: __init__.py  database.py  ollama_processor.py  telegram_bot.py  vk_api_client.py
src/legacy/: __init__.py  vk_publisher.py
src/presentation/: __init__.py
src/processor/: __init__.py  ai_rewriter.py  deduplicator.py
src/publisher/: __init__.py  footer_generator.py  vk_publisher.py
src/telegram_bot/: __init__.py  bot.py
src/utils/: __init__.py  url_safety.py
src/workers/: __init__.py  pipeline.py
tests/: __init__.py  conftest.py  test_ai_rewriter.py  test_database.py  test_deduplicator.py  test_footer_generator.py  test_payload_parsing.py  test_redis_settings.py  test_rewrite_tasks.py  test_url_safety.py  test_vk_api_client.py  test_vk_publisher_adapter.py
tests/Unit/: MediaServiceTest.php  PostServiceTest.php  VkApiClientTest.php
(+8 files in other folders)
