# 📦 Шаблон pyproject.toml для vk_publisher

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vk_publisher"
version = "2.0.0"
description = "Масштабируемый SaaS-сервис автопостинга ВКонтакте с AI-функциями"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Ilya Testov", email = "ilya.testov@example.com"}
]
keywords = [
    "vk",
    "vkontakte",
    "social-media",
    "automation",
    "ai",
    "ollama",
    "fastapi",
    "telegram-bot"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

dependencies = [
    # CORE
    "python-dotenv>=1.1.0",
    "pydantic==2.12.5",
    "pydantic-settings==2.4.0",
    "loguru==0.7.2",
    
    # ASYNC HTTP & NETWORKING
    "aiohttp>=3.10.0,<3.14",
    "tenacity==8.4.1",
    "yarl==1.23.0",
    
    # DATABASE (ASYNC)
    "SQLAlchemy==2.0.31",
    "aiosqlite==0.20.0",
    "asyncpg==0.29.0",
    "alembic==1.13.2",
    
    # TELEGRAM BOT
    "aiogram==3.27.0",
    "aiofiles==23.2.1",
    
    # WEB FRAMEWORK (FASTAPI)
    "fastapi==0.136.1",
    "uvicorn==0.30.1",
    "prometheus-fastapi-instrumentator==7.0.0",
    "prometheus-client==0.20.0",
    
    # RSS & PARSING
    "feedparser==6.0.11",
    "beautifulsoup4==4.12.3",
    "lxml>=6.1.0",
    
    # UTILITIES
    "python-dateutil==2.9.0.post0",
    "cryptography>=46.0.7",
    "typing-extensions==4.12.2",
    
    # WEB UI (GRADIO)
    "gradio==6.7.0",
    "pillow>=10.4.0,<13",
    
    # LEGACY VK API
    "vk-api==11.9.9",
    "requests==2.33.1",
    "fake-useragent==2.2.0",
    
    # BACKGROUND TASKS / RESILIENCE
    "taskiq==0.11.18",
    "taskiq-redis==1.0.6",
    "aiobreaker==1.2.0",
    "httpx==0.27.0",
]

[project.optional-dependencies]
dev = [
    "bandit>=1.7.0",
    "pip-audit>=2.5.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pre-commit>=3.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "semgrep>=1.0.0",
]

ui = [
    "gradio==6.7.0",
    "streamlit>=1.30.0",
]

audio = [
    # Для будущей интеграции с YuE, ACE-Step
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "librosa>=0.10.0",
]

[project.urls]
Homepage = "https://github.com/ilyatestov/vk_publisher"
Documentation = "https://github.com/ilyatestov/vk_publisher/tree/main/docs"
Repository = "https://github.com/ilyatestov/vk_publisher.git"
Issues = "https://github.com/ilyatestov/vk_publisher/issues"

[project.scripts]
vk-publisher = "src.main:run_cli"
vk-publisher-worker = "src.workers.taskiq_worker:run_worker"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=src --cov-report=term-missing"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 120
target-version = "py311"
select = ["E", "F", "W", "I", "N", "D", "UP"]
ignore = ["D100", "D104"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
